--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.6.2",
     "body-parser": "^1.19.2",
     "braintree": "^3.10.0",
     "cookie-parser": "^1.4.6",
@@ -17,12 +18,13 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-jwt": "^6.1.1",
-    "express-validator": "^6.14.0",
+    "express-validator": "^5.3.1",
     "formidable": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "mongoose": "^6.2.9",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "uuid": "^8.3.2"
   }
