--- a/client/package.json
+++ b/client/package.json
@@ -6,18 +6,23 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
     "braintree-web": "^3.85.2",
     "braintree-web-drop-in-react": "^1.2.1",
     "compression": "^1.7.4",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "moment": "^2.29.1",
+    "node-sass": "^7.0.1",
     "pm2": "^5.2.0",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
